--- a/app/templates/docs/surrealql/functions/duration.hbs
+++ b/app/templates/docs/surrealql/functions/duration.hbs
@@ -172,13 +172,13 @@
 		<Code @name="docs-surrealql-functions-duration-days.surql" text="API Definition">
 			duration::days(duration) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-days-input.surql">
-				SELECT * FROM duration::days(3w);
+				RETURN duration::days(3w);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-days-result.txt">
-				[ 21 ]
+				21
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -195,13 +195,13 @@
 		<Code @name="docs-surrealql-functions-duration-hours.surql" text="API Definition">
 			duration::hours(duration) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-hours-input.surql">
-				SELECT * FROM duration::hours(3w);
+				RETURN duration::hours(3w);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-hours-result.txt">
-				[ 504 ]
+				504
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -218,13 +218,13 @@
 		<Code @name="docs-surrealql-functions-duration-micros.surql" text="API Definition">
 			duration::micros(duration) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-micros-input.surql">
-				SELECT * FROM duration::micros(3w);
+				RETURN duration::micros(3w);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-micros-result.txt">
-				[ 1814400000000 ]
+				1814400000000
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -241,13 +241,13 @@
 		<Code @name="docs-surrealql-functions-duration-millis.surql" text="API Definition">
 			duration::millis(duration) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-millis-input.surql">
-				SELECT * FROM duration::millis(3w);
+				RETURN duration::millis(3w);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-millis-result.txt">
-				[ 1814400000 ]
+				1814400000
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -264,13 +264,13 @@
 		<Code @name="docs-surrealql-functions-duration-mins.surql" text="API Definition">
 			duration::mins(duration) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-mins-input.surql">
-				SELECT * FROM duration::mins(3w);
+				RETURN duration::mins(3w);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-mins-result.txt">
-				[ 30240 ]
+				30240
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -287,13 +287,13 @@
 		<Code @name="docs-surrealql-functions-duration-nanos.surql" text="API Definition">
 			duration::nanos(duration) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-nanos-input.surql">
-				SELECT * FROM duration::nanos(3w);
+				RETURN duration::nanos(3w);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-nanos-result.txt">
-				[ 1814400000000000 ]
+				1814400000000000
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -310,13 +310,13 @@
 		<Code @name="docs-surrealql-functions-duration-secs.surql" text="API Definition">
 			duration::secs(duration) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-secs-input.surql">
-				SELECT * FROM duration::secs(3w);
+				RETURN duration::secs(3w);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-secs-result.txt">
-				[ 1814400 ]
+				1814400
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -333,13 +333,13 @@
 		<Code @name="docs-surrealql-functions-duration-weeks.surql" text="API Definition">
 			duration::weeks(duration) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-weeks-input.surql">
-				SELECT * FROM duration::weeks(3w);
+				RETURN duration::weeks(3w);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-weeks-result.txt">
-				[ 3 ]
+				3
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -356,13 +356,13 @@
 		<Code @name="docs-surrealql-functions-duration-years.surql" text="API Definition">
 			duration::years(duration) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-years-input.surql">
-				SELECT * FROM duration::years(300w);
+				RETURN duration::years(300w);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-years-result.txt">
-				[ 5 ]
+				5
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -379,13 +379,13 @@
 		<Code @name="docs-surrealql-functions-duration-from-days.surql" text="API Definition">
 			duration::from::days(number) -> duration
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-from-days-input.surql">
-				SELECT * FROM duration::from::days(3);
+				RETURN duration::from::days(3);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-from-days-result.txt">
-				[ 3d ]
+				3d
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -402,13 +402,13 @@
 		<Code @name="docs-surrealql-functions-duration-from-hours.surql" text="API Definition">
 			duration::from::hours(number) -> duration
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-from-hours-input.surql">
-				SELECT * FROM duration::from::hours(3);
+				RETURN duration::from::hours(3);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-from-hours-result.txt">
-				[ 3h ]
+				3h
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -425,13 +425,13 @@
 		<Code @name="docs-surrealql-functions-duration-from-micros.surql" text="API Definition">
 			duration::from::micros(number) -> duration
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-from-micros-input.surql">
-				SELECT * FROM duration::from::micros(3);
+				RETURN duration::from::micros(3);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-from-micros-result.txt">
-				[ 3μs ]
+				3μs
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -448,13 +448,13 @@
 		<Code @name="docs-surrealql-functions-duration-from-millis.surql" text="API Definition">
 			duration::from::millis(number) -> duration
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-from-millis-input.surql">
-				SELECT * FROM duration::from::millis(3);
+				RETURN duration::from::millis(3);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-from-millis-result.txt">
-				[ 3d ]
+				3d
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -471,13 +471,13 @@
 		<Code @name="docs-surrealql-functions-duration-from-mins.surql" text="API Definition">
 			duration::from::mins(number) -> duration
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-from-mins-input.surql">
-				SELECT * FROM duration::from::mins(3);
+				RETURN duration::from::mins(3);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-from-mins-result.txt">
-				[ 3m ]
+				3m
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -494,13 +494,13 @@
 		<Code @name="docs-surrealql-functions-duration-from-nanos.surql" text="API Definition">
 			duration::from::nanos(number) -> duration
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-from-nanos-input.surql">
-				SELECT * FROM duration::from::nanos(3);
+				RETURN duration::from::nanos(3);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-from-nanos-result.txt">
-				[ 3ns ]
+				3ns
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -517,13 +517,13 @@
 		<Code @name="docs-surrealql-functions-duration-from-secs.surql" text="API Definition">
 			duration::from::secs(number) -> duration
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-from-secs-input.surql">
-				SELECT * FROM duration::from::secs(3);
+				RETURN duration::from::secs(3);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-from-secs-result.txt">
-				[ 3s ]
+				3s
 			</Code>
 		</codes>
 	</Layout::Text>
@@ -540,13 +540,13 @@
 		<Code @name="docs-surrealql-functions-duration-from-weeks.surql" text="API Definition">
 			duration::from::weeks(number) -> duration
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-duration-from-weeks-input.surql">
-				SELECT * FROM duration::from::weeks(3);
+				RETURN duration::from::weeks(3);
 			</Code>
 			<Code @name="docs-surrealql-functions-duration-from-weeks-result.txt">
-				[ 3w ]
+				3w
 			</Code>
 		</codes>
 	</Layout::Text>
