--- a/app/templates/docs/surrealql/functions/math.hbs
+++ b/app/templates/docs/surrealql/functions/math.hbs
@@ -219,10 +219,10 @@
 		<Code @name="docs-surrealql-functions-math-abs.surql" text="API Definition">
 			math::abs(number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-abs-input.surql">
-				SELECT * FROM math::abs(13.746189);
+				RETURN math::abs(13.746189);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-abs-result.txt">
 				13
@@ -242,10 +242,10 @@
 		<Code @name="docs-surrealql-functions-math-bottom.surql" text="API Definition">
 			math::bottom(array{{ "<" }}number>, number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-bottom-input.surql">
-				SELECT * FROM math::bottom([1, 2, 3], 2);
+				RETURN math::bottom([1, 2, 3], 2);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-bottom-result.txt">
 				[ 2, 1 ]
@@ -265,10 +265,10 @@
 		<Code @name="docs-surrealql-functions-math-ceil.surql" text="API Definition">
 			math::ceil(number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-ceil-input.surql">
-				SELECT * FROM math::ceil(13.146572);
+				RETURN math::ceil(13.146572);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-ceil-result.txt">
 				14
@@ -288,10 +288,10 @@
 		<Code @name="docs-surrealql-functions-math-fixed.surql" text="API Definition">
 			math::fixed(number, number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-fixed-input.surql">
-				SELECT * FROM math::fixed(13.146572, 2);
+				RETURN math::fixed(13.146572, 2);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-fixed-result.txt">
 				13.15
@@ -311,10 +311,10 @@
 		<Code @name="docs-surrealql-functions-math-floor.surql" text="API Definition">
 			math::floor(number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-floor-input.surql">
-				SELECT * FROM math::floor(13.746189);
+				RETURN math::floor(13.746189);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-floor-result.txt">
 				13
@@ -334,10 +334,10 @@
 		<Code @name="docs-surrealql-functions-math-interquartile.surql" text="API Definition">
 			math::interquartile(array{{ "<" }}number>) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-interquartile-input.surql">
-				SELECT * FROM math::interquartile([1, 40, 60, 10, 2, 901]);
+				RETURN math::interquartile([ 1, 40, 60, 10, 2, 901 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-interquartile-result.txt">
 				48.5
@@ -357,10 +357,10 @@
 		<Code @name="docs-surrealql-functions-math-max.surql" text="API Definition">
 			math::max(number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-max-input.surql">
-				SELECT * FROM math::max([26.164, 13.746189, 23, 16.4, 41.42]);
+				RETURN math::max([ 26.164, 13.746189, 23, 16.4, 41.42 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-max-result.txt">
 				41.42
@@ -380,10 +380,10 @@
 		<Code @name="docs-surrealql-functions-math-mean.surql" text="API Definition">
 			math::mean(array) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-mean-input.surql">
-				SELECT * FROM math::mean([26.164, 13.746189, 23, 16.4, 41.42]);
+				RETURN math::mean([ 26.164, 13.746189, 23, 16.4, 41.42 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-mean-result.txt">
 				24.1460378
@@ -403,10 +403,10 @@
 		<Code @name="docs-surrealql-functions-math-median.surql" text="API Definition">
 			math::median(array) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-median-input.surql">
-				SELECT * FROM math::median([26.164, 13.746189, 23, 16.4, 41.42]);
+				RETURN math::median([ 26.164, 13.746189, 23, 16.4, 41.42 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-median-result.txt">
 				23
@@ -426,10 +426,10 @@
 		<Code @name="docs-surrealql-functions-math-midhinge.surql" text="API Definition">
 			math::midhinge(array{{ "<" }}number>) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-midhinge-input.surql">
-				SELECT * FROM math::midhinge([1, 40, 60, 10, 2, 901]);
+				RETURN math::midhinge([ 1, 40, 60, 10, 2, 901 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-midhinge-result.txt">
 				25.75
@@ -449,10 +449,10 @@
 		<Code @name="docs-surrealql-functions-math-min.surql" text="API Definition">
 			math::min(array) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-min-input.surql">
-				SELECT * FROM math::min([26.164, 13.746189, 23, 16.4, 41.42]);
+				RETURN math::min([ 26.164, 13.746189, 23, 16.4, 41.42 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-min-result.txt">
 				13.746189
@@ -472,10 +472,10 @@
 		<Code @name="docs-surrealql-functions-math-mode.surql" text="API Definition">
 			math::mode(array{{ "<" }}number>) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-mode-input.surql">
-				SELECT * FROM math::mode([1, 40, 60, 10, 2, 901]);
+				RETURN math::mode([ 1, 40, 60, 10, 2, 901 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-mode-result.txt">
 				901
@@ -495,10 +495,10 @@
 		<Code @name="docs-surrealql-functions-math-nearestrank.surql" text="API Definition">
 			math::nearestrank(array{{ "<" }}number>, number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-nearestrank-input.surql">
-				SELECT * FROM math::nearestrank([1, 40, 60, 10, 2, 901], 50);
+				RETURN math::nearestrank([1, 40, 60, 10, 2, 901], 50);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-nearestrank-result.txt">
 				10
@@ -518,10 +518,10 @@
 		<Code @name="docs-surrealql-functions-math-percentile.surql" text="API Definition">
 			math::percentile(array{{ "<" }}number>, number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-percentile-input.surql">
-				SELECT * FROM math::percentile([1, 40, 60, 10, 2, 901], 50);
+				RETURN math::percentile([1, 40, 60, 10, 2, 901], 50);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-percentile-result.txt">
 				10
@@ -541,10 +541,10 @@
 		<Code @name="docs-surrealql-functions-math-product.surql" text="API Definition">
 			math::product(array) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-product-input.surql">
-				SELECT * FROM math::product([26.164, 13.746189, 23, 16.4, 41.42]);
+				RETURN math::product([ 26.164, 13.746189, 23, 16.4, 41.42 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-product-result.txt">
 				5619119.004884841504
@@ -564,10 +564,10 @@
 		<Code @name="docs-surrealql-functions-math-round.surql" text="API Definition">
 			math::round(number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-round-input.surql">
-				SELECT * FROM math::round(13.53124);
+				RETURN math::round(13.53124);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-round-result.txt">
 				14
@@ -587,10 +587,10 @@
 		<Code @name="docs-surrealql-functions-math-spread.surql" text="API Definition">
 			math::spread(array{{ "<" }}number>) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-spread-input.surql">
-				SELECT * FROM math::spread([1, 40, 60, 10, 2, 901]);
+				RETURN math::spread([ 1, 40, 60, 10, 2, 901 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-spread-result.txt">
 				900
@@ -610,10 +610,10 @@
 		<Code @name="docs-surrealql-functions-math-sqrt.surql" text="API Definition">
 			math::sqrt(number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-sqrt-input.surql">
-				SELECT * FROM math::sqrt(15);
+				RETURN math::sqrt(15);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-sqrt-result.txt">
 				3.872983346207417
@@ -633,10 +633,10 @@
 		<Code @name="docs-surrealql-functions-math-stddev.surql" text="API Definition">
 			math::stddev(array{{ "<" }}number>) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-stddev-input.surql">
-				SELECT * FROM math::stddev([1, 40, 60, 10, 2, 901]);
+				RETURN math::stddev([ 1, 40, 60, 10, 2, 901 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-stddev-result.txt">
 				359.3716738976515383200802748740764743708578424033151316067128042080419093950971134866088206928833419
@@ -656,10 +656,10 @@
 		<Code @name="docs-surrealql-functions-math-sum.surql" text="API Definition">
 			math::sum(array) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-sum-input.surql">
-				SELECT * FROM math::sum([26.164, 13.746189, 23, 16.4, 41.42]);
+				RETURN math::sum([ 26.164, 13.746189, 23, 16.4, 41.42 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-sum-result.txt">
 				120.730189
@@ -679,10 +679,10 @@
 		<Code @name="docs-surrealql-functions-math-top.surql" text="API Definition">
 			math::top(array{{ "<" }}number>, number) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-top-input.surql">
-				SELECT * FROM math::top([1, 40, 60, 10, 2, 901], 3);
+				RETURN math::top([1, 40, 60, 10, 2, 901], 3);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-top-result.txt">
 				[ 40, 901, 60 ]
@@ -702,10 +702,10 @@
 		<Code @name="docs-surrealql-functions-math-trimean.surql" text="API Definition">
 			math::trimean(array{{ "<" }}number>) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-trimean-input.surql">
-				SELECT * FROM math::trimean([1, 40, 60, 10, 2, 901]);
+				RETURN math::trimean([ 1, 40, 60, 10, 2, 901 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-trimean-result.txt">
 				32.875
@@ -725,10 +725,10 @@
 		<Code @name="docs-surrealql-functions-math-variance.surql" text="API Definition">
 			math::variance(array{{ "<" }}number>) -> number
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-math-variance-input.surql">
-				SELECT * FROM math::variance([1, 40, 60, 10, 2, 901]);
+				RETURN math::variance([ 1, 40, 60, 10, 2, 901 ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-math-variance-result.txt">
 				129148
