--- a/app/templates/docs/surrealql/functions/parse.hbs
+++ b/app/templates/docs/surrealql/functions/parse.hbs
@@ -99,10 +99,10 @@
 		<Code @name="docs-surrealql-functions-parse-email-host.surql" text="API Definition">
 			parse::email::host(string) -> string
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-parse-email-host-input.surql">
-				SELECT * FROM parse::email::host("info@surrealdb.com");
+				RETURN parse::email::host("info@surrealdb.com");
 			</Code>
 			<Code @name="docs-surrealql-functions-parse-email-host-result.txt">
 				"surrealdb.com"
@@ -122,10 +122,10 @@
 		<Code @name="docs-surrealql-functions-parse-email-user.surql" text="API Definition">
 			parse::email::user(string) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-parse-email-user-input.surql">
-				SELECT * FROM parse::email::user("info@surrealdb.com");
+				RETURN parse::email::user("info@surrealdb.com");
 			</Code>
 			<Code @name="docs-surrealql-functions-parse-email-user-result.txt">
 				"info"
@@ -145,10 +145,10 @@
 		<Code @name="docs-surrealql-functions-parse-url-domain.surql" text="API Definition">
 			parse::url::domain(string) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-parse-url-domain-input.surql">
-				SELECT * FROM parse::url::domain("https://surrealdb.com:80/features?some=option#fragment");
+				RETURN parse::url::domain("https://surrealdb.com:80/features?some=option#fragment");
 			</Code>
 			<Code @name="docs-surrealql-functions-parse-url-domain-result.txt">
 				"surrealdb.com"
@@ -168,10 +168,10 @@
 		<Code @name="docs-surrealql-functions-parse-url-fragment.surql" text="API Definition">
 			parse::url::fragment(string) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-parse-url-fragment-input.surql">
-				SELECT * FROM parse::url::fragment("https://surrealdb.com:80/features?some=option#fragment");
+				RETURN parse::url::fragment("https://surrealdb.com:80/features?some=option#fragment");
 			</Code>
 			<Code @name="docs-surrealql-functions-parse-url-fragment-result.txt">
 				"fragment"
@@ -191,10 +191,10 @@
 		<Code @name="docs-surrealql-functions-parse-url-host.surql" text="API Definition">
 			parse::url::host(string) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-parse-url-host-input.surql">
-				SELECT * FROM parse::url::host("https://surrealdb.com:80/features?some=option#fragment");
+				RETURN parse::url::host("https://surrealdb.com:80/features?some=option#fragment");
 			</Code>
 			<Code @name="docs-surrealql-functions-parse-url-host-result.txt">
 				"surrealdb.com"
@@ -214,10 +214,10 @@
 		<Code @name="docs-surrealql-functions-parse-url-path.surql" text="API Definition">
 			parse::url::path(string) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-parse-url-path-input.surql">
-				SELECT * FROM parse::url::path("https://surrealdb.com:80/features?some=option#fragment");
+				RETURN parse::url::path("https://surrealdb.com:80/features?some=option#fragment");
 			</Code>
 			<Code @name="docs-surrealql-functions-parse-url-path-result.txt">
 				"/features"
@@ -237,10 +237,10 @@
 		<Code @name="docs-surrealql-functions-parse-url-port.surql" text="API Definition">
 			parse::url::port(string) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-parse-url-port-input.surql">
-				SELECT * FROM parse::url::port("https://surrealdb.com:80/features?some=option#fragment");
+				RETURN parse::url::port("https://surrealdb.com:80/features?some=option#fragment");
 			</Code>
 			<Code @name="docs-surrealql-functions-parse-url-port-result.txt">
 				80
@@ -260,10 +260,10 @@
 		<Code @name="docs-surrealql-functions-parse-url-query.surql" text="API Definition">
 			parse::url::query(string) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-parse-url-query-input.surql">
-				SELECT * FROM parse::url::query("https://surrealdb.com:80/features?some=option#fragment");
+				RETURN parse::url::query("https://surrealdb.com:80/features?some=option#fragment");
 			</Code>
 			<Code @name="docs-surrealql-functions-parse-url-query-result.txt">
 				"some=option"
