--- a/app/templates/docs/surrealql/functions/meta.hbs
+++ b/app/templates/docs/surrealql/functions/meta.hbs
@@ -51,10 +51,10 @@
 		<Code @name="docs-surrealql-functions-meta-id.surql" text="API Definition">
 			meta::id(record) -> value
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-meta-id-input.surql">
-				SELECT * FROM meta::id(person:tobie);
+				RETURN meta::id(person:tobie);
 			</Code>
 			<Code @name="docs-surrealql-functions-meta-id-result.txt">
 				"tobie"
@@ -74,10 +74,10 @@
 		<Code @name="docs-surrealql-functions-meta-tb.surql" text="API Definition">
 			meta::tb(record) -> string
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-meta-tb-input.surql">
-				SELECT * FROM meta::tb(person:tobie);
+				RETURN meta::tb(person:tobie);
 			</Code>
 			<Code @name="docs-surrealql-functions-meta-tb-result.txt">
 				"person"
