--- a/app/templates/docs/surrealql/functions/validation.hbs
+++ b/app/templates/docs/surrealql/functions/validation.hbs
@@ -139,10 +139,10 @@
 		<Code @name="docs-surrealql-functions-is-array.surql" text="API Definition">
 			is::array(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-array-input.surql">
-				SELECT * FROM is::array(['a', 'b', 'c']);
+				RETURN is::array([ 'a', 'b', 'c' ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-is-array-result.txt">
 				true
@@ -162,10 +162,10 @@
 		<Code @name="docs-surrealql-functions-is-set.surql" text="API Definition">
 			is::set(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-set-input.surql">
-				SELECT * FROM is::set(['a', 'b', 'c']);
+				RETURN is::set([ 'a', 'b', 'c' ]);
 			</Code>
 			<Code @name="docs-surrealql-functions-is-set-result.txt">
 				true
@@ -185,10 +185,10 @@
 		<Code @name="docs-surrealql-functions-is-bool.surql" text="API Definition">
 			is::bool(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-bool-input.surql">
-				SELECT * FROM is::bool(true);
+				RETURN is::bool(true);
 			</Code>
 			<Code @name="docs-surrealql-functions-is-bool-result.txt">
 				true
@@ -208,10 +208,10 @@
 		<Code @name="docs-surrealql-functions-is-datetime.surql" text="API Definition">
 			is::datetime(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-datetime-input.surql">
-				SELECT * FROM is::datetime(time::now());
+				RETURN is::datetime(time::now());
 			</Code>
 			<Code @name="docs-surrealql-functions-is-datetime-result.txt">
 				true
@@ -231,10 +231,10 @@
 		<Code @name="docs-surrealql-functions-is-decimal.surql" text="API Definition">
 			is::decimal(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-decimal-input.surql">
-				SELECT * FROM is::decimal({{ "<" }}decimal> 13.5719384719384719385639856394139476937756394756);
+				RETURN is::decimal({{ "<" }}decimal> 13.5719384719384719385639856394139476937756394756);
 			</Code>
 			<Code @name="docs-surrealql-functions-is-decimal-result.txt">
 				true
@@ -254,10 +254,10 @@
 		<Code @name="docs-surrealql-functions-is-duration.surql" text="API Definition">
 			is::duration(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-duration-input.surql">
-				SELECT * FROM is::duration({{ "<" }}datetime> '1970-01-01T00:00:00');
+				RETURN is::duration({{ "<" }}datetime> '1970-01-01T00:00:00');
 			</Code>
 			<Code @name="docs-surrealql-functions-is-duration-result.txt">
 				true
@@ -277,10 +277,10 @@
 		<Code @name="docs-surrealql-functions-is-float.surql" text="API Definition">
 			is::float(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-float-input.surql">
-				SELECT * FROM is::float({{ "<" }}float> 41.5);
+				RETURN is::float({{ "<" }}float> 41.5);
 			</Code>
 			<Code @name="docs-surrealql-functions-is-float-result.txt">
 				true
@@ -300,10 +300,10 @@
 		<Code @name="docs-surrealql-functions-is-int.surql" text="API Definition">
 			is::int(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-int-input.surql">
-				SELECT * FROM is::int({{ "<" }}int> 123);
+				RETURN is::int({{ "<" }}int> 123);
 			</Code>
 			<Code @name="docs-surrealql-functions-is-int-result.txt">
 				true
@@ -323,10 +323,10 @@
 		<Code @name="docs-surrealql-functions-is-number.surql" text="API Definition">
 			is::number(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-number-input.surql">
-				SELECT * FROM is::number(123);
+				RETURN is::number(123);
 			</Code>
 			<Code @name="docs-surrealql-functions-is-number-result.txt">
 				true
@@ -346,10 +346,10 @@
 		<Code @name="docs-surrealql-functions-is-object.surql" text="API Definition">
 			is::object(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-object-input.surql">
-				SELECT * FROM is::object({ hello: 'world' });
+				RETURN is::object({ hello: 'world' });
 			</Code>
 			<Code @name="docs-surrealql-functions-is-object-result.txt">
 				true
@@ -369,10 +369,10 @@
 		<Code @name="docs-surrealql-functions-is-string.surql" text="API Definition">
 			is::string(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-string-input.surql">
-				SELECT * FROM is::string("abc");
+				RETURN is::string("abc");
 			</Code>
 			<Code @name="docs-surrealql-functions-is-string-result.txt">
 				true
@@ -392,10 +392,10 @@
 		<Code @name="docs-surrealql-functions-is-record.surql" text="API Definition">
 			is::record(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-record-input.surql">
-				SELECT * FROM is::record(user:tobie);
+				RETURN is::record(user:tobie);
 			</Code>
 			<Code @name="docs-surrealql-functions-is-record-result.txt">
 				true
@@ -415,10 +415,10 @@
 		<Code @name="docs-surrealql-functions-is-geometry.surql" text="API Definition">
 			is::geometry(any) -> bool
 		</Code>
-		<p>The following example shows this function, and its output, when used in a select statement:</p>
+		<p>The following example shows this function, and its output, when used in a <Link @link="docs.surrealql.statements.return"><code>RETURN</code></Link> statement:</p>
 		<codes vertical>
 			<Code @name="docs-surrealql-functions-is-geometry-input.surql">
-				SELECT * FROM is::geometry((-0.118092, 51.509865));
+				RETURN is::geometry((-0.118092, 51.509865));
 			</Code>
 			<Code @name="docs-surrealql-functions-is-geometry-result.txt">
 				true
