--- a/app/components/feedback-form/template.hbs
+++ b/app/components/feedback-form/template.hbs
@@ -19,6 +19,8 @@
 			<div class='feedback-form'>
 				{{#if this.isNewFeedBack}}
 					<form>
+						Give feedback
+						<line></line>
 						<div class='category-select'>
 							{{! template-lint-disable require-input-label }}
 							<select {{on 'change' this.setCategory}}>
